--- a/lib/web/templates/admin/npc/_form.html.eex
+++ b/lib/web/templates/admin/npc/_form.html.eex
@@ -51,6 +51,14 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :events %>
+        <%= textarea f, :events, value: @changeset |> events(), class: "form-control", rows: 10 %>
+        <%= error_tag f, :events %>
+        <span class="help-block">Enter in valid JSON</span>
+        <%= render("_events.html", id: "npc_events") %>
+      </div>
+
+      <div class="form-group">
         <%= label f, :notes %>
         <%= textarea f, :notes, class: "form-control", rows: 10 %>
         <%= error_tag f, :notes %>
