--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -46,6 +46,12 @@
               <% end %>
             </li>
             <li class="header">MAIN NAVIGATION</li>
+            <li class="<%= tab_selected(@conn, "bugs") %>">
+              <%= link(to: bug_path(@conn, :index)) do %>
+                <i class="fa fa-bug"></i>
+                <span>Bugs</span>
+              <% end %>
+            </li>
             <li class="<%= tab_selected(@conn, ["classes", "skills"]) %>">
               <%= link(to: class_path(@conn, :index)) do %>
                 <i class="fa fa-user-circle"></i>
