--- a/lib/web/templates/layout/app.html.eex
+++ b/lib/web/templates/layout/app.html.eex
@@ -66,7 +66,7 @@
     <footer>
       <div class="container">
         <p class="text-muted">
-          Built with <%= ExVenture.version() %>.
+          Built with <%= link(ExVenture.version(), to: "http://exventure.org") %>.
         </p>
       </div>
     </footer>
