--- a/lib/web/templates/admin/npc_spawner/new.html.eex
+++ b/lib/web/templates/admin/npc_spawner/new.html.eex
@@ -18,7 +18,28 @@
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <%= render "_form.html", path: npc_spawner_path(@conn, :create, @npc.id), changeset: @changeset, new: true, title: "New", submit: "Create" %>
+      <%= if display_full_form?(@conn) do %>
+        <%= render "_form.html", path: npc_spawner_path(@conn, :create, @npc.id), zone: @zone, changeset: @changeset, new: true, title: "New", submit: "Create" %>
+      <% else %>
+        <div class="box">
+          <div class="box-header">
+            <h3 class="box-title">Zone</h3>
+          </div>
+
+          <%= form_tag npc_spawner_path(@conn, :new, @npc.id), method: :get do %>
+            <div class="box-body">
+              <div class="form-group">
+                <%= label :npc_spawner, :zone_id %>
+                <%= select :npc_spawner, :zone_id, Zone.all() |> Enum.map(&({&1.name, &1.id})), class: "form-control" %>
+              </div>
+            </div>
+
+            <div class="box-footer">
+              <%= submit "Continue", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
 </section>
