--- a/lib/web/templates/admin/user/show.html.eex
+++ b/lib/web/templates/admin/user/show.html.eex
@@ -19,6 +19,10 @@
                 <td><%= @user.name %></td>
               </tr>
               <tr>
+                <th>Email</th>
+                <td><%= @user.email %></td>
+              </tr>
+              <tr>
                 <th>Race</th>
                 <td><%= link(@user.race.name, to: race_path(@conn, :show, @user.race_id)) %></td>
               </tr>
