--- a/lib/web/templates/admin/shared/_pagination.html.eex
+++ b/lib/web/templates/admin/shared/_pagination.html.eex
@@ -1,53 +1,55 @@
-<ul class="pagination pagination-sm no-margin pull-right">
-  <%= if @pagination.current == 1 do %>
-    <li class="disabled">
-      <span>&laquo;</span>
-    </li>
-  <% else %>
-    <li>
-      <%= link(to: page_path(@path, 1)) do %>
-        &laquo;
-      <% end %>
-    </li>
-  <% end %>
+<%= if !@pagination.empty? do %>
+  <ul class="pagination pagination-sm no-margin pull-right">
+    <%= if @pagination.current == 1 do %>
+      <li class="disabled">
+        <span>&laquo;</span>
+      </li>
+    <% else %>
+      <li>
+        <%= link(to: page_path(@path, 1)) do %>
+          &laquo;
+        <% end %>
+      </li>
+    <% end %>
 
-  <%= if more_previous?(@pagination) do %>
-    <li class="disabled">
-      <span>&hellip;</span>
-    </li>
-  <% end %>
+    <%= if more_previous?(@pagination) do %>
+      <li class="disabled">
+        <span>&hellip;</span>
+      </li>
+    <% end %>
 
-  <%= Enum.map(previous_pagination(@pagination), fn (page) -> %>
-    <li>
-      <%= link(page, to: page_path(@path, page)) %>
-    </li>
-  <% end) %>
+    <%= Enum.map(previous_pagination(@pagination), fn (page) -> %>
+      <li>
+        <%= link(page, to: page_path(@path, page)) %>
+      </li>
+    <% end) %>
 
-  <li class="active">
-    <span><%= @pagination.current %></span>
-  </li>
+    <li class="active">
+      <span><%= @pagination.current %></span>
+    </li>
 
-  <%= Enum.map(next_pagination(@pagination), fn (page) -> %>
-    <li>
-      <%= link(page, to: page_path(@path, page)) %>
-    </li>
-  <% end) %>
+    <%= Enum.map(next_pagination(@pagination), fn (page) -> %>
+      <li>
+        <%= link(page, to: page_path(@path, page)) %>
+      </li>
+    <% end) %>
 
-  <%= if more_next?(@pagination) do %>
-    <li class="disabled">
-      <span>&hellip;</span>
-    </li>
-  <% end %>
+    <%= if more_next?(@pagination) do %>
+      <li class="disabled">
+        <span>&hellip;</span>
+      </li>
+    <% end %>
 
-  <%= if @pagination.current == @pagination.total do %>
-    <li class="disabled">
-      <span>&raquo;</span>
-    </li>
-  <% else %>
-    <li>
-      <%= link(to: page_path(@path, @pagination.total)) do %>
-        &raquo;
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+    <%= if @pagination.current == @pagination.total do %>
+      <li class="disabled">
+        <span>&raquo;</span>
+      </li>
+    <% else %>
+      <li>
+        <%= link(to: page_path(@path, @pagination.total)) do %>
+          &raquo;
+        <% end %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
