Paginate the help topic index

--- a/lib/web/templates/admin/help_topic/index.html.eex
+++ b/lib/web/templates/admin/help_topic/index.html.eex
@@ -45,6 +45,8 @@
               <% end %>
             </tbody>
           </table>
+
+          <%= render(SharedView, "_pagination.html", path: help_topic_path(@conn, :index), pagination: @pagination) %>
         </div>
       </div>
     </div>
