--- a/lib/web/templates/admin/item/index.html.eex
+++ b/lib/web/templates/admin/item/index.html.eex
@@ -35,6 +35,8 @@
               <% end %>
             </tbody>
           </table>
+
+          <%= render(SharedView, "_pagination.html", path: item_path(@conn, :index), pagination: @pagination) %>
         </div>
       </div>
     </div>
