--- a/lib/web/templates/admin/item/_form.html.eex
+++ b/lib/web/templates/admin/item/_form.html.eex
@@ -64,6 +64,20 @@
         <span class="help-block">Enter in valid JSON</span>
         <%= render(SharedView, "_effects.html", id: "item_effects") %>
       </div>
+
+      <div class="form-group">
+        <%= label f, :user_text %>
+        <%= text_input f, :user_text, class: "form-control" %>
+        <%= error_tag f, :user_text %>
+        <span class="help-block">Available replacements: <code>user</code>, <code>name</code>, <code>target</code>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :usee_text %>
+        <%= text_input f, :usee_text, class: "form-control" %>
+        <%= error_tag f, :usee_text %>
+        <span class="help-block">Available replacements: <code>user</code>, <code>name</code>, <code>target</code>
+      </div>
     </div>
 
     <div class="box-footer">
