--- a/lib/web/templates/admin/shared/_effects.html.eex
+++ b/lib/web/templates/admin/shared/_effects.html.eex
@@ -4,7 +4,7 @@ $(function() {
     "damage": <%= Effect.starting_effect("damage") |> encode_json() %>,
     "damage/type": <%= Effect.starting_effect("damage/type") |> encode_json() %>,
     "damage/over-time": <%= Effect.starting_effect("damage/over-time") |> encode_json() %>,
-    "healing": <%= Effect.starting_effect("healing") |> encode_json() %>,
+    "recover": <%= Effect.starting_effect("recover") |> encode_json() %>,
     "stats": <%= Effect.starting_effect("stats") |> encode_json() %>
   };
 
@@ -27,7 +27,7 @@ $(function() {
   <%= link("Add 'damage'", to: "#", class: "btn btn-default add-effect", data: [type: "damage"]) %>
   <%= link("Add 'damage/type'", to: "#", class: "btn btn-default add-effect", data: [type: "damage/type"]) %>
   <%= link("Add 'damage/over-time'", to: "#", class: "btn btn-default add-effect", data: [type: "damage/over-time"]) %>
-  <%= link("Add 'healing'", to: "#", class: "btn btn-default add-effect", data: [type: "healing"]) %>
+  <%= link("Add 'recover'", to: "#", class: "btn btn-default add-effect", data: [type: "recover"]) %>
   <%= link("Add 'stats'", to: "#", class: "btn btn-default add-effect", data: [type: "stats"]) %>
 </span>
 <span class="help-block">
